[tool.poetry]
name = "hc-service-backend"
version = "0.1.0"
description = ""
authors = ["matm <matm@gft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
pre-commit = "^3.7.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
